--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
                 >
               </li>
             </ul>
-            <br />
+            <br /><br />
             <p>Welcome to Chen's Physics World!</p>
           </header>
           <footer>
@@ -304,81 +304,132 @@
                   <header>
                     <h3>Research Experience</h3>
                   </header>
-                  <strong
-                    ><a
-                      href="https://www.imperial.ac.uk/a-z-research/quantum-optics-and-laser-science/"
-                      >Quantum Optics and Laser Science (QOLS) Group</a
-                    ></strong
-                  >, Imperial College London<br />
-                  <i>M.Sc. Student, advised by Dr. John Michniewicz</i><br />
-                  <i>Jun. 2024 - Present</i>
                   <ul>
                     <li>
-                      Charge Noise in Semiconductor Spin Qubits for Quantum
-                      Computing
+                      <strong
+                        ><a
+                          href="https://www.imperial.ac.uk/a-z-research/quantum-optics-and-laser-science/"
+                          >Quantum Optics and Laser Science (QOLS) Group</a
+                        ></strong
+                      >, Imperial College London, <i>Jun. 2024 - Present</i
+                      ><br />
+                      Under the guidance of Dr. John Michniewicz, I focus on
+                      investigating
+                      <strong
+                        >charge noise in semiconductor spin qubits for quantum
+                        computing</strong
+                      >. My work includes wire bonding quantum devices for
+                      characterization and studying the charge transport
+                      properties of semiconductor quantum dots at cryogenic
+                      temperatures using a dilution refrigerator. To enhance
+                      experimental efficiency, I developed an automated Python
+                      package to standardize communication protocols across
+                      experimental devices, significantly improving the
+                      measurement workflow.
                     </li>
-                  </ul>
-                  <strong
-                    ><a href="http://en.baqis.ac.cn/research/groups/?cid=814"
-                      >Quantum Operating System Group</a
-                    ></strong
-                  >, Beijing Academy of Quantum Information Sciences (BAQIS)<br />
-                  <i>Research Intern (remote), advised by Dr. Jingbo Wang</i
-                  ><br />
-                  <i>May 2024 - Present</i>
-                  <ul>
-                    <li>Rydberg Atom Quantum Computing and Compilation</li>
-                  </ul>
-                  <strong
-                    ><a
-                      href="https://research.baidu.com/Research_Areas/index-view?id=75"
-                      >Institute for Quantum Computing</a
-                    ></strong
-                  >, Baidu, Inc.<br />
-                  <i>Research Intern, advised by Dr. Jingbo Wang</i><br />
-                  <i>Mar. 2023 - Sep. 2023</i>
-                  <ul>
                     <li>
-                      Automated Calibration of Experimental Parameters in
-                      Trapped-Ion Quantum Computer
+                      <strong
+                        ><a
+                          href="http://en.baqis.ac.cn/research/groups/?cid=814"
+                          >Quantum Operating System Group</a
+                        ></strong
+                      >, Beijing Academy of Quantum Information Sciences
+                      (BAQIS), <i>May 2024 - Present</i><br />
+                      As a remote intern at BAQIS, I focus on
+                      <strong
+                        >Rydberg atom quantum computing and compilation</strong
+                      >, a rapidly advancing area of quantum research. In this
+                      work, I introduce ZAP, a zoned architecture that separates
+                      the computational area into distinct storage and
+                      entanglement zones. Through ASAP scheduling and a
+                      simulated annealing algorithm, ZAP optimizes qubit
+                      placement and movement paths, fully harnessing the dynamic
+                      connectivity and large-scale parallelism of neutral atom
+                      platforms. This work was published on
+                      <a href="https://arxiv.org/abs/2411.14037">arXiv</a>.
                     </li>
-                  </ul>
-                  <strong
-                    ><a href="https://www.iqsqm.com/"
-                      >International Joint Lab on Quantum Sensing and Quantum
-                      Metrology</a
-                    ></strong
-                  >, HUST<br />
-                  <i>Research Assistant, advised by Prof. Jianming Cai</i><br />
-                  <i>Apr. 2019 - Dec. 2022</i>
-                  <ul>
                     <li>
-                      Nanoscale Detection of Ions Using a Spin Quantum Sensor
+                      <strong
+                        ><a
+                          href="https://research.baidu.com/Research_Areas/index-view?id=75"
+                          >Institute for Quantum Computing</a
+                        ></strong
+                      >, Baidu, Inc., <i>Mar. 2023 - Sep. 2023</i><br />
+                      Working under Dr. Jingbo Wang, I developed an
+                      <strong
+                        >automated calibration framework for trapped-ion quantum
+                        computers</strong
+                      >, enabling precise determination of phonon frequencies
+                      and Lamb-Dicke parameters. This Python-based tool reduced
+                      manual intervention, improved parameter accuracy, and
+                      resulted in three patents. The rigorous industrial
+                      training at Baidu honed my <strong>coding skills</strong>,
+                      emphasizing code quality, documentation, and
+                      maintainability, ensuring future usability of the
+                      developed tools.
                     </li>
-                    <li>Measurements of Entangled Qubits</li>
+                    <li>
+                      <strong
+                        ><a href="https://www.iqsqm.com/"
+                          >International Joint Lab on Quantum Sensing and
+                          Quantum Metrology</a
+                        ></strong
+                      >, HUST, <i>Apr. 2019 - Dec. 2022</i><br />
+                      For my graduation project,
+                      <strong
+                        >Nanoscale Detection of Ions Using a Spin Quantum
+                        Sensor</strong
+                      >, I focused on NV center quantum sensing. Combining
+                      theoretical calculations with simulations, I derived the
+                      relationship between spin coherence time and ion
+                      concentration. Additionally, I developed a 2D axisymmetric
+                      model for a Surface Forces Apparatus cavity and conducted
+                      finite element analysis using <strong>COMSOL</strong>,
+                      achieving strong agreement between analytical results and
+                      simulations.
+                    </li>
+                    <li>
+                      <strong
+                        ><a href="https://bradley-lab.weebly.com/"
+                          >Bradley Lab</a
+                        ></strong
+                      >, University of Saskatchewan - Saskatoon,
+                      <i>Jun. 2021 - Oct. 2021</i><br />
+                      As part of the
+                      <a
+                        href="https://www.mitacs.ca/our-programs/globalink-research-internship-students/"
+                      >
+                        MITACS Globalink Research Internship </a
+                      >, I contributed to the project
+                      <strong
+                        >New Plasma Processing Techniques for Advanced
+                        Materials</strong
+                      >. Due to COVID-19 travel restrictions, this work was
+                      conducted remotely, where I focused on coding tasks
+                      related to plasma motion while gaining insights into
+                      plasma processing techniques. (<a href="docs/MITACS.pdf"
+                        >View Certificate</a
+                      >)
+                    </li>
+                    <li>
+                      <strong
+                        ><a href="https://lodiphie.physics.sjtu.edu.cn/"
+                          >Laboratory of Low Dimensional Physics and Interface
+                          Engineering</a
+                        ></strong
+                      >, Shanghai Jiao Tong University,
+                      <i>Jun. 2019 - Sep. 2022</i><br />
+                      During my summer research internship under Prof. Hao
+                      Zheng, I conducted an STM study on topological insulators.
+                      My work included fabricating STM tips using
+                      electrochemical methods, performing Raman spectroscopy,
+                      learning the working theory of Molecular Beam Epitaxy
+                      (MBE) and Scanning Tunneling Microscopy (STM).
+                      Additionally, I contributed to assembling a dilution
+                      refrigerator, gaining valuable hands-on experience in
+                      advanced experimental techniques.
+                    </li>
                   </ul>
-                  <strong
-                    ><a href="https://bradley-lab.weebly.com/"
-                      >Bradley Lab</a
-                    ></strong
-                  >, University of Saskatchewan - Saskatoon<br />
-                  <i
-                    ><a
-                      href="https://www.mitacs.ca/our-programs/globalink-research-internship-students/"
-                      >MITACS Globalink Research Internship</a
-                    >
-                    (remote), advised by Prof. Michael Bradley</i
-                  ><br />
-                  <i>Jun. 2021 - Oct. 2021</i>
-                  <strong
-                    ><a href="https://lodiphie.physics.sjtu.edu.cn/"
-                      >Laboratory of Low Dimensional Physics and Interface
-                      Engineering</a
-                    ></strong
-                  >, Shanghai Jiao Tong University<br />
-                  <i>Summer Research Intern, advised by Prof. Hao Zheng</i
-                  ><br />
-                  <i>Jun. 2019 - Sep. 2022</i>
                 </section>
                 <hr />
                 <section id="awards">
