--- a/index.html
+++ b/index.html
@@ -299,7 +299,6 @@
                     </li>
                   </ul>
                 </section>
-                <hr />
                 <section id="research">
                   <header>
                     <h3>Research Experience</h3>
@@ -311,8 +310,8 @@
                           href="https://www.imperial.ac.uk/a-z-research/quantum-optics-and-laser-science/"
                           >Quantum Optics and Laser Science (QOLS) Group</a
                         ></strong
-                      >, Imperial College London, <i>Jun. 2024 - Present</i
-                      ><br />
+                      >, Imperial College London<br />
+                      <i>Jun. 2024 - Present</i><br />
                       Under the guidance of Dr. John Michniewicz, I focus on
                       investigating
                       <strong
@@ -327,6 +326,7 @@
                       experimental devices, significantly improving the
                       measurement workflow.
                     </li>
+                    <br />
                     <li>
                       <strong
                         ><a
@@ -334,7 +334,8 @@
                           >Quantum Operating System Group</a
                         ></strong
                       >, Beijing Academy of Quantum Information Sciences
-                      (BAQIS), <i>May 2024 - Present</i><br />
+                      (BAQIS)<br />
+                      <i>May 2024 - Present</i><br />
                       As a remote intern at BAQIS, I focus on
                       <strong
                         >Rydberg atom quantum computing and compilation</strong
@@ -348,13 +349,15 @@
                       platforms. This work was published on
                       <a href="https://arxiv.org/abs/2411.14037">arXiv</a>.
                     </li>
+                    <br />
                     <li>
                       <strong
                         ><a
                           href="https://research.baidu.com/Research_Areas/index-view?id=75"
                           >Institute for Quantum Computing</a
                         ></strong
-                      >, Baidu, Inc., <i>Mar. 2023 - Sep. 2023</i><br />
+                      >, Baidu, Inc.<br />
+                      <i>Mar. 2023 - Sep. 2023</i><br />
                       Working under Dr. Jingbo Wang, I developed an
                       <strong
                         >automated calibration framework for trapped-ion quantum
@@ -368,13 +371,15 @@
                       maintainability, ensuring future usability of the
                       developed tools.
                     </li>
+                    <br />
                     <li>
                       <strong
                         ><a href="https://www.iqsqm.com/"
                           >International Joint Lab on Quantum Sensing and
                           Quantum Metrology</a
                         ></strong
-                      >, HUST, <i>Apr. 2019 - Dec. 2022</i><br />
+                      >, HUST<br />
+                      <i>Apr. 2019 - Dec. 2022</i><br />
                       For my graduation project,
                       <strong
                         >Nanoscale Detection of Ions Using a Spin Quantum
@@ -388,12 +393,13 @@
                       achieving strong agreement between analytical results and
                       simulations.
                     </li>
+                    <br />
                     <li>
                       <strong
                         ><a href="https://bradley-lab.weebly.com/"
                           >Bradley Lab</a
                         ></strong
-                      >, University of Saskatchewan - Saskatoon,
+                      >, University of Saskatchewan - Saskatoon<br />
                       <i>Jun. 2021 - Oct. 2021</i><br />
                       As part of the
                       <a
@@ -411,13 +417,14 @@
                         >View Certificate</a
                       >)
                     </li>
+                    <br />
                     <li>
                       <strong
                         ><a href="https://lodiphie.physics.sjtu.edu.cn/"
                           >Laboratory of Low Dimensional Physics and Interface
                           Engineering</a
                         ></strong
-                      >, Shanghai Jiao Tong University,
+                      >, Shanghai Jiao Tong University<br />
                       <i>Jun. 2019 - Sep. 2022</i><br />
                       During my summer research internship under Prof. Hao
                       Zheng, I conducted an STM study on topological insulators.
@@ -429,6 +436,7 @@
                       refrigerator, gaining valuable hands-on experience in
                       advanced experimental techniques.
                     </li>
+                    <br />
                   </ul>
                 </section>
                 <hr />
