--- a/index.html
+++ b/index.html
@@ -287,7 +287,7 @@
                       <strong>Imperial College London</strong><br />
                       M.Sc. in Physics with extended research, advised by Dr.
                       John Michniewicz<br />
-                      Sep. 2023 - Sep. 2025 (Expected)
+                      <i>Sep. 2023 - Sep. 2025 (Expected)</i>
                     </li>
                     <li>
                       <strong
@@ -295,7 +295,7 @@
                         (HUST)</strong
                       ><br />
                       B.S. in Physics, advised by Prof. Jianming Cai<br />
-                      Sep. 2018 - Jun. 2022
+                      <i>Sep. 2018 - Jun. 2022</i>
                     </li>
                   </ul>
                 </section>
