--- a/index.html
+++ b/index.html
@@ -317,14 +317,15 @@
                       <strong
                         >charge noise in semiconductor spin qubits for quantum
                         computing</strong
-                      >. My work includes wire bonding quantum devices for
-                      characterization and studying the charge transport
-                      properties of semiconductor quantum dots at cryogenic
-                      temperatures using a dilution refrigerator. To enhance
-                      experimental efficiency, I developed an automated Python
-                      package to standardize communication protocols across
-                      experimental devices, significantly improving the
-                      measurement workflow.
+                      >. My work includes <strong>wire bonding</strong> quantum
+                      devices for characterization and studying the
+                      <strong>charge transport</strong> properties of
+                      semiconductor quantum dots at cryogenic temperatures using
+                      a <strong>dilution refrigerator</strong>. To enhance
+                      experimental efficiency, I
+                      <strong>developed an automated Python package</strong> to
+                      standardize communication protocols across experimental
+                      devices, significantly improving the measurement workflow.
                     </li>
                     <br />
                     <li>
@@ -340,13 +341,18 @@
                       <strong
                         >Rydberg atom quantum computing and compilation</strong
                       >, a rapidly advancing area of quantum research. In this
-                      work, I introduce ZAP, a zoned architecture that separates
-                      the computational area into distinct storage and
-                      entanglement zones. Through ASAP scheduling and a
-                      simulated annealing algorithm, ZAP optimizes qubit
-                      placement and movement paths, fully harnessing the dynamic
-                      connectivity and large-scale parallelism of neutral atom
-                      platforms. This work was published on
+                      work, I introduce <strong>ZAP</strong>, a zoned
+                      architecture that
+                      <strong
+                        >separates the computational area into distinct storage
+                        and entanglement zones</strong
+                      >. Through ASAP scheduling and a simulated annealing
+                      algorithm, ZAP optimizes qubit placement and movement
+                      paths, fully harnessing the dynamic connectivity and
+                      large-scale parallelism of neutral atom platforms, and
+                      achieving a
+                      <strong>significant increase on fidelity</strong>. This
+                      work was published on
                       <a href="https://arxiv.org/abs/2411.14037">arXiv</a>.
                     </li>
                     <br />
@@ -362,10 +368,12 @@
                       <strong
                         >automated calibration framework for trapped-ion quantum
                         computers</strong
-                      >, enabling precise determination of phonon frequencies
-                      and Lamb-Dicke parameters. This Python-based tool reduced
-                      manual intervention, improved parameter accuracy, and
-                      resulted in three patents. The rigorous industrial
+                      >, enabling precise determination of
+                      <strong
+                        >phonon frequencies and Lamb-Dicke parameters</strong
+                      >. This Python-based tool reduced manual intervention,
+                      improved parameter accuracy, and resulted in
+                      <strong>three patents</strong>. The rigorous industrial
                       training at Baidu honed my <strong>coding skills</strong>,
                       emphasizing code quality, documentation, and
                       maintainability, ensuring future usability of the
@@ -386,11 +394,13 @@
                         Sensor</strong
                       >, I focused on NV center quantum sensing. Combining
                       theoretical calculations with simulations, I derived the
-                      relationship between spin coherence time and ion
-                      concentration. Additionally, I developed a 2D axisymmetric
-                      model for a Surface Forces Apparatus cavity and conducted
-                      finite element analysis using <strong>COMSOL</strong>,
-                      achieving strong agreement between analytical results and
+                      <strong
+                        >relationship between spin coherence time and ion
+                        concentration</strong
+                      >. Additionally, I developed a 2D axisymmetric model for a
+                      Surface Forces Apparatus cavity and conducted finite
+                      element analysis using <strong>COMSOL</strong>, achieving
+                      strong agreement between analytical results and
                       simulations.
                     </li>
                     <br />
@@ -412,8 +422,10 @@
                         Materials</strong
                       >. Due to COVID-19 travel restrictions, this work was
                       conducted remotely, where I focused on coding tasks
-                      related to plasma motion while gaining insights into
-                      plasma processing techniques. (<a href="docs/MITACS.pdf"
+                      related to <strong>plasma motion</strong> while gaining
+                      insights into
+                      <strong>plasma processing techniques</strong>. (<a
+                        href="docs/MITACS.pdf"
                         >View Certificate</a
                       >)
                     </li>
@@ -427,14 +439,18 @@
                       >, Shanghai Jiao Tong University<br />
                       <i>Jun. 2019 - Sep. 2022</i><br />
                       During my summer research internship under Prof. Hao
-                      Zheng, I conducted an STM study on topological insulators.
-                      My work included fabricating STM tips using
-                      electrochemical methods, performing Raman spectroscopy,
-                      learning the working theory of Molecular Beam Epitaxy
-                      (MBE) and Scanning Tunneling Microscopy (STM).
-                      Additionally, I contributed to assembling a dilution
-                      refrigerator, gaining valuable hands-on experience in
-                      advanced experimental techniques.
+                      Zheng, I conducted an
+                      <strong>STM study on topological insulators</strong>. My
+                      work included <strong>fabricating STM tips</strong> using
+                      electrochemical methods, performing
+                      <strong>Raman spectroscopy</strong>, learning the working
+                      theory of
+                      <strong
+                        >Molecular Beam Epitaxy (MBE) and Scanning Tunneling
+                        Microscopy (STM)</strong
+                      >. Additionally, I contributed to assembling a
+                      <strong>dilution refrigerator</strong>, gaining valuable
+                      hands-on experience in advanced experimental techniques.
                     </li>
                     <br />
                   </ul>
