--- a/index.html
+++ b/index.html
@@ -420,10 +420,11 @@
                       <strong
                         >New Plasma Processing Techniques for Advanced
                         Materials</strong
-                      >. Due to COVID-19 travel restrictions, this work was
-                      conducted remotely, where I focused on coding tasks
-                      related to <strong>plasma motion</strong> while gaining
-                      insights into
+                      >
+                      under the guidance of Prof. Michael Bradley. Due to
+                      COVID-19 travel restrictions, this work was conducted
+                      remotely, where I focused on coding tasks related to
+                      <strong>plasma motion</strong> while gaining insights into
                       <strong>plasma processing techniques</strong>. (<a
                         href="docs/MITACS.pdf"
                         >View Certificate</a
