--- a/index.html
+++ b/index.html
@@ -139,6 +139,14 @@
                   agriculture, and laying the foundation for Chinese culture and
                   history.
                 </p>
+                <p>
+                  I am always on the lookout for new opportunities to expand my
+                  knowledge and skills. Whether through collaborative projects,
+                  internships, or further academic research, I'm eager to
+                  connect with like-minded individuals and organizations. If
+                  you're interested in my research or potential collaboration,
+                  please feel free to reach out! 📧
+                </p>
                 <audio id="name-audio">
                   <source
                     src="audio/pronunciation_zh_chen.mp3"
@@ -508,35 +516,6 @@
               </article>
             </div>
           </div>
-
-          <p>
-            At Imperial College London, I focus on experimental work with
-            <strong>semiconductor qubits</strong> under the guidance of Dr. John
-            Michniewicz. Meanwhile, I'm a remote intern at the
-            <a href="http://en.baqis.ac.cn/"
-              >Beijing Academy of Quantum Information Sciences (BAQIS)</a
-            >, where I work with Dr. Jingbo Wang on
-            <strong>Rydberg atom quantum computing and compilation</strong>.
-          </p>
-          <p>
-            Theoretical research brings me the joy of creating new ideas, while
-            experimental work excites me as I witness "physics happening in the
-            lab." I am deeply passionate about both aspects of my research and
-            enjoy the unique challenges and rewards each offers.
-          </p>
-          <p>
-            I am passionate about exploring the fascinating realms of Quantum
-            Computing and Quantum Information. Outside of academics, I enjoy
-            photography, traveling, reading, and learning new things.
-          </p>
-          <p>
-            I am always on the lookout for new opportunities to expand my
-            knowledge and skills. Whether through collaborative projects,
-            internships, or further academic research, I'm eager to connect with
-            like-minded individuals and organizations. If you're interested in
-            my research or potential collaboration, please feel free to reach
-            out! 📧
-          </p>
         </article>
       </div>
 
