--- a/index.html
+++ b/index.html
@@ -118,11 +118,6 @@
                     >Click to hear the pronunciation</a
                   >)
                 </header>
-                <footer>
-                  <a href="docs/CV_ChenHuang.pdf" class="button"
-                    >Curriculum Vitae</a
-                  >
-                </footer>
                 <p>
                   My given name is Chen, which means "dawn" or "early morning"
                   in Chinese. This meaning suits me well, as I am a morning
@@ -158,6 +153,9 @@
                     type="audio/mpeg"
                   />
                 </audio>
+                <footer>
+                  <a href="docs/CV_ChenHuang.pdf" class="button">My Full CV</a>
+                </footer>
               </section>
               <hr />
               <section>
