--- a/index.html
+++ b/index.html
@@ -499,23 +499,50 @@
                     </li>
                   </ul>
                 </section>
-                <section id="leadership">
-                  <header>
-                    <h3>Leadership</h3>
-                  </header>
-                  <p>
-                    <strong
-                      >Innovative Base of Physics Experiments (IBPE),
-                      HUST</strong
-                    ><br />
-                    <i>Chairperson</i>
-                  </p>
-                </section>
               </article>
             </div>
           </div>
         </article>
       </div>
+      <div id="main" class="wrapper style1">
+        <article class="container special">
+          <header>
+            <h3>Leadership</h3>
+          </header>
+
+          <strong>Innovative Base of Physics Experiments (IBPE), HUST</strong
+          ><br />
+          <i>Chairperson, May 2019 - Jul. 2020</i>
+          <div class="row">
+            <article class="col-8 col-12-mobile special">
+              <a href="#" class="image featured"
+                ><img src="images/pic07.jpg" alt=""
+              /></a>
+            </article>
+            <article class="col-4 col-12-mobile special">
+              <a href="docs/IRL V1N1.pdf">
+                <img src="images/IRL V1N1 cover.png" alt="Open PDF">
+              </a>
+            </article>
+          <p>
+            In collaboration with my team, I organized and led reading group
+            activities to help first-year students adapt to university-level
+            learning. We divided students into small groups of 4-5, with each
+            group assigned a mentor from senior students. Weekly tasks centered
+            around The Feynman Lectures on Physics were assigned, including
+            theoretical derivations, experimental design, and simulations.
+            Students collaborated within their groups to solve these tasks,
+            while mentors offered guidance and suggestions. These activities not
+            only deepened students' understanding of core physics concepts but
+            also fostered a cooperative and engaging atmosphere within the
+            department.
+          </p>
+          <image scr="docs/IRL V1N1.pdf" alt="">View Certificate</a>
+        </article>
+      </div>
+
+
+
 
       <!-- Features -->
       <div class="wrapper style1">
@@ -523,8 +550,8 @@
           <header>
             <h2>Research Interests</h2>
             <p>
-              I am passionate about exploring the fascinating realms of Quantum
-              Computing and Quantum Information.
+              I am passionate about exploring the fascinating
+              <strong>quantum world</strong>.
             </p>
           </header>
           <div class="row">
