--- a/index.html
+++ b/index.html
@@ -509,40 +509,47 @@
           <header>
             <h3>Leadership</h3>
           </header>
-
           <strong>Innovative Base of Physics Experiments (IBPE), HUST</strong
           ><br />
           <i>Chairperson, May 2019 - Jul. 2020</i>
           <div class="row">
             <article class="col-8 col-12-mobile special">
-              <a href="#" class="image featured"
-                ><img src="images/pic07.jpg" alt=""
-              /></a>
+              <p>
+                In collaboration with my team, I organized and led reading group
+                activities to help first-year students adapt to university-level
+                learning. We divided students into small groups of 4-5, with
+                each group assigned a mentor from senior students. Weekly tasks
+                centered around The Feynman Lectures on Physics were assigned,
+                including theoretical derivations, experimental design, and
+                simulations. Students collaborated within their groups to solve
+                these tasks, while mentors offered guidance and suggestions.
+                These activities not only deepened students' understanding of
+                core physics concepts but also fostered a cooperative and
+                engaging atmosphere within the department.
+              </p>
             </article>
             <article class="col-4 col-12-mobile special">
               <a href="docs/IRL V1N1.pdf">
-                <img src="images/IRL V1N1 cover.png" alt="Open PDF">
+                <img src="images/IRL V1N1 cover.png" alt="Open PDF" />
               </a>
+              <p>
+                This is the inaugural issue of
+                <strong>IBPE Review Letters (IRL)</strong>, a journal my
+                teammates and I established to preserve and share the
+                intellectual output of IBPE members. While IBPE is known for its
+                numerous reading and exploratory activities, many brilliant
+                outcomes from past projects were unfortunately left
+                undocumented, leading to the loss of valuable insights over
+                time. To address this, we created IRL to publish key
+                achievements from IBPE activities, contributions to the IBPE
+                Annual Academic Meeting, and review articles or academic notes
+                authored by IBPE members. We hope this initiative inspires new
+                members and provides guidance for their research endeavors.
+              </p>
             </article>
-          <p>
-            In collaboration with my team, I organized and led reading group
-            activities to help first-year students adapt to university-level
-            learning. We divided students into small groups of 4-5, with each
-            group assigned a mentor from senior students. Weekly tasks centered
-            around The Feynman Lectures on Physics were assigned, including
-            theoretical derivations, experimental design, and simulations.
-            Students collaborated within their groups to solve these tasks,
-            while mentors offered guidance and suggestions. These activities not
-            only deepened students' understanding of core physics concepts but
-            also fostered a cooperative and engaging atmosphere within the
-            department.
-          </p>
-          <image scr="docs/IRL V1N1.pdf" alt="">View Certificate</a>
+          </div>
         </article>
       </div>
-
-
-
 
       <!-- Features -->
       <div class="wrapper style1">
