--- a/index.html
+++ b/index.html
@@ -286,7 +286,7 @@
               <article>
                 <section id="education">
                   <header>
-                    <h3>Education</h3>
+                    <h2>Education</h2>
                   </header>
                   <ul>
                     <li>
@@ -307,7 +307,7 @@
                 </section>
                 <section id="research">
                   <header>
-                    <h3>Research Experience</h3>
+                    <h2>Research Experience</h2>
                   </header>
                   <ul>
                     <li>
@@ -464,7 +464,7 @@
                 </section>
                 <section id="awards">
                   <header>
-                    <h3>Awards and Honors</h3>
+                    <h2>Awards and Honors</h2>
                   </header>
                   <ul>
                     <li>
@@ -504,10 +504,10 @@
           </div>
         </article>
       </div>
-      <div id="main" class="wrapper style1">
+      <div id="leadership" class="wrapper style1">
         <article class="container special">
           <header>
-            <h3>Leadership</h3>
+            <h2>Leadership</h2>
           </header>
           <strong>Innovative Base of Physics Experiments (IBPE), HUST</strong
           ><br />
@@ -553,7 +553,7 @@
 
       <!-- Features -->
       <div class="wrapper style1">
-        <section id="features" class="container special">
+        <section id="interests" class="container special">
           <header>
             <h2>Research Interests</h2>
             <p>
