--- a/index.html
+++ b/index.html
@@ -529,8 +529,8 @@
               </p>
             </article>
             <article class="col-4 col-12-mobile special">
-              <a href="docs/IRL V1N1.pdf">
-                <img src="images/IRL V1N1 cover.png" alt="Open PDF" />
+              <a href="docs/IRL V1N1.pdf" class="image fit">
+                <img src="images/IRL V1N1 cover.png" alt="" />
               </a>
               <p>
                 This is the inaugural issue of
