--- a/index.html
+++ b/index.html
@@ -527,25 +527,34 @@
                 core physics concepts but also fostered a cooperative and
                 engaging atmosphere within the department.
               </p>
+              <div class="row gtr-50">
+                <div class="col-4">
+                  <a href="docs/IRL V1N1.pdf" class="image fit">
+                    <img src="images/IRL V1N1 cover.png" alt="" />
+                  </a>
+                </div>
+                <div class="col-8">
+                  <h4>Chief editor of IRL</h4>
+                  <p>
+                    This is the inaugural issue of
+                    <strong>IBPE Review Letters (IRL)</strong>, a journal my
+                    teammates and I established to preserve and share the
+                    intellectual output of IBPE members. While IBPE is known for
+                    its numerous reading and exploratory activities, many
+                    brilliant outcomes from past projects were unfortunately
+                    left undocumented, leading to the loss of valuable insights
+                    over time. To address this, we created IRL to publish key
+                    achievements from IBPE activities, contributions to the IBPE
+                    Annual Academic Meeting, and review articles or academic
+                    notes authored by IBPE members. We hope this initiative
+                    inspires new members and provides guidance for their
+                    research endeavors.
+                  </p>
+                </div>
+              </div>
             </article>
             <article class="col-4 col-12-mobile special">
-              <a href="docs/IRL V1N1.pdf" class="image fit">
-                <img src="images/IRL V1N1 cover.png" alt="" />
-              </a>
-              <p>
-                This is the inaugural issue of
-                <strong>IBPE Review Letters (IRL)</strong>, a journal my
-                teammates and I established to preserve and share the
-                intellectual output of IBPE members. While IBPE is known for its
-                numerous reading and exploratory activities, many brilliant
-                outcomes from past projects were unfortunately left
-                undocumented, leading to the loss of valuable insights over
-                time. To address this, we created IRL to publish key
-                achievements from IBPE activities, contributions to the IBPE
-                Annual Academic Meeting, and review articles or academic notes
-                authored by IBPE members. We hope this initiative inspires new
-                members and provides guidance for their research endeavors.
-              </p>
+              <img src="images/IBPE intro.png" alt="" />
             </article>
           </div>
         </article>
