--- a/index.html
+++ b/index.html
@@ -534,7 +534,7 @@
                   </a>
                 </div>
                 <div class="col-8">
-                  <h4>Chief editor of IRL</h4>
+                  <h4>Chief editor of IRL (2020)</h4>
                   <p>
                     This is the inaugural issue of
                     <strong>IBPE Review Letters (IRL)</strong>, a journal my
