--- a/index.html
+++ b/index.html
@@ -514,18 +514,22 @@
           <i>Chairperson, May 2019 - Jul. 2020</i>
           <div class="row">
             <article class="col-8 col-12-mobile special">
+              <h4>Feymann reading group</h4>
               <p>
                 In collaboration with my team, I organized and led reading group
                 activities to help first-year students adapt to university-level
                 learning. We divided students into small groups of 4-5, with
                 each group assigned a mentor from senior students. Weekly tasks
-                centered around The Feynman Lectures on Physics were assigned,
-                including theoretical derivations, experimental design, and
-                simulations. Students collaborated within their groups to solve
-                these tasks, while mentors offered guidance and suggestions.
-                These activities not only deepened students' understanding of
-                core physics concepts but also fostered a cooperative and
-                engaging atmosphere within the department.
+                centered around <i>The Feynman Lectures on Physics</i> were
+                assigned, including
+                <strong
+                  >theoretical derivations, experimental design, and
+                  simulations</strong
+                >. Students collaborated within their groups to solve these
+                tasks, while mentors offered guidance and suggestions. These
+                activities not only deepened students' understanding of core
+                physics concepts but also fostered a cooperative and engaging
+                atmosphere within the department.
               </p>
               <div class="row gtr-50">
                 <div class="col-4">
@@ -554,7 +558,9 @@
               </div>
             </article>
             <article class="col-4 col-12-mobile special">
-              <img src="images/IBPE intro.png" alt="" />
+              <a href="" class="image fit">
+                <img src="images/IBPE intro.png" alt="" />
+              </a>
             </article>
           </div>
         </article>
