--- a/index.html
+++ b/index.html
@@ -533,7 +533,7 @@
               </p>
               <div class="row gtr-50">
                 <div class="col-4">
-                  <a href="docs/IRL V1N1.pdf" class="image fit">
+                  <a href="" class="image fit">
                     <img src="images/IRL V1N1 cover.png" alt="" />
                   </a>
                 </div>
