--- a/index.html
+++ b/index.html
@@ -507,11 +507,14 @@
       <div id="leadership" class="wrapper style1">
         <article class="container special">
           <header>
-            <h2>Leadership</h2>
+            <h2>Innovative Base of Physics Experiments (IBPE), HUST</h2>
           </header>
-          <strong>Innovative Base of Physics Experiments (IBPE), HUST</strong
-          ><br />
-          <i>Chairperson, May 2019 - Jul. 2020</i>
+          <br />
+          <i
+            >During May 2019 - July 2020, I was the chairperson of IBPE. I was
+            the first and only female leader of the platform since its
+            establishment in 2002.</i
+          >
           <div class="row">
             <article class="col-8 col-12-mobile special">
               <h4>Feymann reading group</h4>
