--- a/index.html
+++ b/index.html
@@ -504,8 +504,10 @@
           </div>
         </article>
       </div>
-      <div id="leadership" class="wrapper style1">
-        <article class="container special">
+
+      <!-- Leadership -->
+      <div class="wrapper style1">
+        <section class="container special">
           <header>
             <h2>Innovative Base of Physics Experiments (IBPE), HUST</h2>
           </header>
@@ -566,7 +568,7 @@
               </a>
             </article>
           </div>
-        </article>
+        </section>
       </div>
 
       <!-- Features -->
